src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DDS_Segment__c</fullName>
        <formula>IF(ISPICKVAL(Company_Type__c, &quot;Accountant&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Alpha Capture&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Associations&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Bank - Investment&quot;), &quot;InvestmentBanks&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Bank - Lender&quot;), &quot;CommercialBanks&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Commercial Broker&quot;), &quot;Brokers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Competitor&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Consultant&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Family Office&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Fixed Income/CMBS&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Government&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Dedicated&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Dedicated, Event Driven&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Dedicated Sponsor&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Dedicated Sponsor, Event Driven&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Event Driven&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;High Net Worth - RIA&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Individual&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Institutional Consultant&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Insurance&quot;), &quot;PensionsEndowmentsInsuranceCompanies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Law Firm&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Dedicated&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Generalist&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Generalist, Dedicated Sponsor&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Pension Fund/Endowment&quot;), &quot;PensionsEndowmentsInsuranceCompanies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Press&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Private Equity - Dedicated&quot;), &quot;PERE_Companies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Private Equity - Diversified&quot;), &quot;PERE_Companies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Rating Agency&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Real Estate Company&quot;), &quot;PERE_Companies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;REIT - Coverage Universe&quot;), &quot;PERE_Companies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;REIT - Non Coverage Universe&quot;), &quot;PERE_Companies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Retailer&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Sovereign Wealth Fund&quot;), &quot;PensionsEndowmentsInsuranceCompanies&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Trading Only&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;University&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Vendor&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Other&quot;), &quot;AdvisorsOthers&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Hedge Fund-dedicated&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Hedge Fund-generalist&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Long Only-dedicated&quot;), &quot;PublicEquityInvestors&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Long Only-generalist&quot;), &quot;PublicEquityInvestors&quot;,
&quot;&quot;))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>DDS - Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo.</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataLink_Access__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DataLink Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Origin__c</fullName>
        <inlineHelpText>Defines the sheet used to load this data originally and its original Origin eg 070917 GC Dynamics</inlineHelpText>
        <label>Data Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Date former clients stopped getting research</description>
        <inlineHelpText>CDB research deactivation date</inlineHelpText>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debtor_Number__c</fullName>
        <label>Debtor Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delinian_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for migration from Delinian Business Intelligence (NXG) org</description>
        <externalId>true</externalId>
        <label>Delinian Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Delinian_Parent_Id__c</fullName>
        <label>Delinian Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_NAV_Models__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed NAV/Earnings Models</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distant_Leads__c</fullName>
        <label>Distant Leads</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU_Expansion_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EU Expansion Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entitlement_Guidance_Notes__c</fullName>
        <label>Entitlement Guidance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement_Guidance__c</fullName>
        <label>Entitlement Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restricted - See Notes Field</fullName>
                </value>
                <value>
                    <fullName>No Restrictions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excel_Add_In_Users__c</fullName>
        <label>Excel Add-In Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Export_Activated_Users__c</fullName>
        <formula>HYPERLINK(&apos;/00O5G000007wRTHUA2?pv0=&apos;+X18_digit_Account_ID__c+&apos;&amp;export=1&amp;enc=UTF-8&amp;xf=xlsx&amp;isdtp=p1&apos;,Text(Activated_Users__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activated Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Excel_Add_In_Users__c</fullName>
        <formula>HYPERLINK(&apos;/00OVy000000YwG5MAK?pv0=&apos;+X18_digit_Account_ID__c+&apos;&amp;export=1&amp;enc=UTF-8&amp;xf=xlsx&amp;isdtp=p1&apos;,Text( Excel_Add_In_Users__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excel Add-In Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Renewal_Year_Research__c</fullName>
        <label>First Renewal Year (Research)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Renewal_Year__c</fullName>
        <label>First Renewal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Owner_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Owner Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>GSA Company ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GSA_ID_Auto1__c</fullName>
        <label>GSA ID Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GSA_ID_Legacy__c</fullName>
        <externalId>true</externalId>
        <label>GSA ID Legacy</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GSA_ID__c</fullName>
        <formula>IF 
(ISBLANK(GSA_ID_Legacy__c), (GSA_ID_Auto1__c), (GSA_ID_Legacy__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSA ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Exposure__c</fullName>
        <label>Geographic Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <externalId>true</externalId>
        <label>Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Active_Opportunities_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked the record will be included in the automatic sanction check process.</description>
        <inlineHelpText>if checked the record will be included in the automatic sanction check process.</inlineHelpText>
        <label>Has Active Opportunities Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Active_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked the record will be included in the automatic sanction check process.</description>
        <inlineHelpText>if checked the record will be included in the automatic sanction check process.</inlineHelpText>
        <label>Has Active Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value_Data_Sets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High-Value Data Sets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>depicts if an account is currently listed as High Value</description>
        <label>High Value Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IJ_Company_Type__c</fullName>
        <label>IJ Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Asset/Investment Management</fullName>
                </value>
                <value>
                    <fullName>Audit/Accountancy</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Credit Card Acquirer</fullName>
                </value>
                <value>
                    <fullName>Development Bank/Body</fullName>
                </value>
                <value>
                    <fullName>ECA</fullName>
                </value>
                <value>
                    <fullName>Engine Lessor</fullName>
                </value>
                <value>
                    <fullName>Executive Search</fullName>
                </value>
                <value>
                    <fullName>Financial Arranger</fullName>
                </value>
                <value>
                    <fullName>Fuel Supplier</fullName>
                </value>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>Government/Regulatory</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Developers and Services</fullName>
                </value>
                <value>
                    <fullName>Infrastructure/Utility</fullName>
                </value>
                <value>
                    <fullName>Institutional Investor</fullName>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Lessor</fullName>
                </value>
                <value>
                    <fullName>MGA</fullName>
                </value>
                <value>
                    <fullName>MRO</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IJ_Global_Events_UID__c</fullName>
        <label>IJ Global Events - UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IJ_Relationship__c</fullName>
        <label>IJ Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Office__c</fullName>
        <label>In Office</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Work From Home</fullName>
                </value>
                <value>
                    <fullName>Will Come In For Analyst Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Sector Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Life Science</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Mall</fullName>
                </value>
                <value>
                    <fullName>Manufactured Housing</fullName>
                </value>
                <value>
                    <fullName>Medical Office Building</fullName>
                </value>
                <value>
                    <fullName>Multi-Sector</fullName>
                </value>
                <value>
                    <fullName>Net Lease</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Self-Storage</fullName>
                </value>
                <value>
                    <fullName>Senior Housing</fullName>
                </value>
                <value>
                    <fullName>Single Family Rentals</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing Facility</fullName>
                </value>
                <value>
                    <fullName>Strip Center</fullName>
                </value>
                <value>
                    <fullName>Student Housing</fullName>
                </value>
                <value>
                    <fullName>Towers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Contact_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Customer_Rep_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Rep Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_Industry__c</fullName>
        <inlineHelpText>migrated from LDC&apos;s Hubsppot</inlineHelpText>
        <label>LDC Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Opp__c</fullName>
        <label>Last Renewal Opp</label>
        <summarizedField>Opportunity.Contract_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>2 - Conducting Needs Analysis, 3 - Qualifying, 4 - Recommending, 5 - Negotiation and Agreement Sent, 6 - Verbal Win and Finalizing Contract, Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Renewal, Renewal - Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Training_Date__c</fullName>
        <label>Last Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Membership_Account__c</fullName>
        <description>List membership for this account</description>
        <inlineHelpText>ie &quot;hot prospect&quot;</inlineHelpText>
        <label>List Membership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>ROW</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locatus_ID__c</fullName>
        <label>Locatus ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Client__c</fullName>
        <label>Lost Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_1__c</fullName>
        <description>Used to capture Mailing street information parts used for reporting.</description>
        <inlineHelpText>Used to capture Mailing street information parts used for reporting.</inlineHelpText>
        <label>Mailing Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_2__c</fullName>
        <description>Used to capture Mailing street information parts used for reporting.</description>
        <inlineHelpText>Used to capture Mailing street information parts used for reporting.</inlineHelpText>
        <label>Mailing Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_3__c</fullName>
        <description>Used to capture Mailing street information parts used for reporting.</description>
        <inlineHelpText>Used to capture Mailing street information parts used for reporting.</inlineHelpText>
        <label>Mailing Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Data_Deals_L60D_Usage__c</fullName>
        <inlineHelpText>Market Data &amp; Deals platform clicks for this account over the last 60 days</inlineHelpText>
        <label>Market Data &amp; Deals L60D Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Expansion_Account__c</fullName>
        <formula>IF(US_Expansion_Owner__r.Id = $User.Id, TRUE,
IF(EU_Expansion_Owner__r.Id = $User.Id, TRUE,
FALSE))</formula>
        <label>My Expansion Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Strategic_Account__c</fullName>
        <formula>OR( 
Strategic_Co_Lead__r.Id =  $User.Id,
Strategic_Lead__r.Id  = $User.Id,
UK_Lead__r.Id = $User.Id,
UK_Co_Lead__r.Id = $User.Id)</formula>
        <label>My Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <description>This helps managers run reports to see their teams information based on the manager field not based on the Role Hierarchy</description>
        <formula>OR(
Owner.Manager.Id = $User.Id,
Owner.Id = $User.Id)</formula>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_Company_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>NS Company Internal ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Customer_ID__c</fullName>
        <inlineHelpText>For Sales Ops to enter the NetSuite customer ID</inlineHelpText>
        <label>NetSuite Customer ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Product_Expansion_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product Expansion Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>News_ID__c</fullName>
        <externalId>true</externalId>
        <label>News ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Steps_Account__c</fullName>
        <label>Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opportunities__c</fullName>
        <label>Number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Sales_Opportunities__c</fullName>
        <description>Calculates the number of open Sales Opportunities.</description>
        <label>Number of Open Sales Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Opportunity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscriptions__c</fullName>
        <label>Number of Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Date__c</fullName>
        <label>Original Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Vendors__c</fullName>
        <description>If you make changes to this field - make sure to also update the options in the opportunity formula field for vendors.</description>
        <label>Other Vendors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerIDName__c</fullName>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerIDName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_is_Active__c</fullName>
        <formula>Owner.IsActive</formula>
        <label>Owner is Active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>